ghc-4335c07/testsuite/tests/indexed-types/should_fail/T13102/B.hs
module B where

import F

f :: F Int -> Bool
f = id
